# fastapi-nextjs-websocket

./: .env.example  .gitignore  AGENTS.md  CONVENTIONS.md  DATA_FLOW.md  README.md  add-plan.md  docker-compose.yml
backend/: .env.example  AGENTS.md  Dockerfile  alembic.ini  check.ps1  entrypoint.sh  pyproject.toml  scratch_output.txt  scratch_query.py  test_notify.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0003_uuid_fk_migration.py  0004_add_browser_notification.py  0005_widen_sequence_name.py  12d95178888c_split_userid_and_username.py  22cec7d94e56_add_refresh_tokens_table.py  23cfcafba0a6_remove_display_name_from_users.py  5516592850dc_add_display_name_to_users.py  a224f7bccdc8_replace_delivery_sequences_with_native_.py
backend/app/: check_pw.py  main.py
backend/app/application/: uow.py
backend/app/application/interfaces/: auth.py  connection_manager.py  password.py  presence.py
backend/app/application/outbox/: delivery_feed.py  payload.py  repository.py  routing.py
backend/app/application/repositories/: delivery_feed_repository.py
backend/app/application/services/: auth_management_service.py  auth_service.py  chat_service.py  connection_service.py  direct_request_service.py  feed_query_service.py  global_chat_service.py  outbox_management_service.py  request_service.py  routing_strategies.py  user_settings_service.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: delivery_feed.py  direct_request.py  message.py  payload.py  refresh_token.py  system_event.py  task.py  user.py  user_settings.py
backend/app/domain/factories/: delivery_feed_factory.py
backend/app/domain/primitives/: base.py  feed.py  primitives.py  request_status.py  task_status.py
backend/app/domain/repositories/: connection_manager.py  delivery_feed_repository.py  event_publisher.py  jwt_service.py  message_repository.py  refresh_token_repository.py  request_repository.py  task_repository.py  user_repository.py  user_settings_repository.py
backend/app/domain/services/: feed_routing.py
backend/app/infrastructure/: config.py  rate_limiter.py  serialization.py
backend/app/infrastructure/auth/: jwt_service.py  login_rate_limiter.py  password_hasher.py  redis_ticket_store.py  uuid7.py
backend/app/infrastructure/messaging/: cleanup_worker.py  redis_presence_store.py  redis_publisher.py  redis_subscriber.py  relay_worker.py
backend/app/infrastructure/persistence/: orm_models.py  sa_message_repository.py  sa_outbox_repository.py  sa_refresh_token_repository.py  sa_request_repository.py  sa_task_repository.py  sa_uow.py  sa_user_repository.py  sa_user_settings_repository.py  seeding.py  session.py
backend/app/presentation/: dependencies.py
backend/app/presentation/admin/: auth.py  views.py
backend/app/presentation/api/: auth.py  direct_requests.py  feeds.py  global_chat.py  messages.py  requests.py  user_settings.py
backend/app/presentation/websockets/: endpoint.py  manager.py  schemas.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_portal.py  test_db_smoke.py  test_direct_requests_api.py  test_global_chat_api.py  test_sessions.py  test_ws_ticket.py
(+344 files in other folders)
