[project]
name = "fastapi-nextjs-websocket-backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pyjwt",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary",
    "pydantic-settings",
    "redis",
]

[tool.uv]
package = false

[tool.poetry]
name = "fastapi-nextjs-websocket-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "*", extras = ["standard"]}
pyjwt = "*"
sqlalchemy = {version = "*", extras = ["asyncio"]}
asyncpg = "*"
psycopg2-binary = "*"
pydantic-settings = "*"
redis = {version = "*", extras = ["asyncio"]}
pytest = "^9.0.3"

[tool.fastapi]
entrypoint = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "mypy>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and pydocstyle (D)
select = ["E", "F", "I", "D", "W"]
ignore = [
    "D415", # First line should end with a period
    "D200", # One-line docstring should fit on one line
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
